# miniconf

./: CMakeLists.txt  License.txt  README.md  index.html  params.json
examples/: miniconf_example1.cpp  miniconf_example2.cpp  test.cpp
src/: main.cpp  miniconf.h
